--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -1,7 +1,7 @@
 .box-1{
     width: 50%;
     min-width: 350px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     height: 150px;
     display: flex;
     flex-direction: column;
@@ -13,8 +13,9 @@
 
 #admin-button{
     position: absolute;
-    right: 0;
-    top: 20px;
+    right: 50%;
+    transform: translateX(50%);
+    bottom: 20px;
 }
 
 button{
@@ -29,6 +30,10 @@ input{
     border: none;
     border-bottom: 1px solid #c60000;
     padding: 5px 40px;
+}
+
+#home-serial-input{
+    border-bottom: 1px solid #c60000 !important;
 }
 
 .data-box{
