all the changes by clients

--- a/frontend/src/components/Admin.css
+++ b/frontend/src/components/Admin.css
@@ -9,6 +9,7 @@
     /* height: 250px; */
     background-color: #f3f3f3;
     padding: 20px;
+    margin: 20px auto;
 }
 
 .create-warranty-card > div{
